fix layout shift on secondary button :active and :focus, make :before behave same as primary button

--- a/packages/components/button/_button.scss
+++ b/packages/components/button/_button.scss
@@ -147,6 +147,7 @@ $button-padding-left-right: nhsuk-spacing(3);
   }
 
   &:focus {
+    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size * 1.5); // s1
     background: $nhsuk-focus-color;
     border-color: $nhsuk-focus-color;
     border-bottom: 0;
@@ -164,6 +165,7 @@ $button-padding-left-right: nhsuk-spacing(3);
   }
 
   &:active {
+    @include nhsuk-responsive-margin(5, "bottom", $adjustment: $button-shadow-size * 1.5); // s1
     background: $nhsuk-secondary-button-active-color;
     border-color: $nhsuk-secondary-button-border-color;
     border-bottom: $button-border-width solid;
@@ -177,6 +179,10 @@ $button-padding-left-right: nhsuk-spacing(3);
       padding-bottom: $button-padding-top-bottom-mobile; // [4] //
       padding-top: $button-padding-top-bottom-mobile; // [4] //
     }
+  }
+
+  &:active::before {
+    bottom: -($nhsuk-border-width-form-element + $button-shadow-size);
   }
 }
 
